--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-//spring.datasource.url=jdbc:h2:file:/data/notes
+//spring.datasource.url=jdbc:h2:file:./data/note
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -12,4 +12,6 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 server.error.include-message=always
 server.error.include-binding-errors=always
+logging.level.org.springframework.security=DEBUG
+
 
